--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-text-selection-popover": "^2.0.1",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
