--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-text-selection-popover": "^2.0.1",
     "typescript": "^4.5.2",
